@@ -1,5 +1,13 @@
 2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/filterlambda.h, -src/filterlambda.cpp, src/Makefile.am:
+	  - Apply "indent -nut" + manual adjustments.
+	  - Move FilterLambda member functions to header and make them inline.
+	  - Drop empty d-tor.
+	  - Remove now-unused filterlambda.h.
+
+2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/abswordseg.h:
 	* src/abswordseg.cpp:
 	* src/wordseg.cpp:
